@@ -4,7 +4,10 @@ import androidx.compose.material.Surface
 import androidx.compose.runtime.Composable
 import androidx.compose.runtime.CompositionLocalProvider
 import androidx.compose.ui.Modifier
+import cafe.adriel.voyager.navigator.Navigator
+import cafe.adriel.voyager.transitions.SlideTransition
 import org.jetbrains.compose.ui.tooling.preview.Preview
+import presentation.screens.tutorialHomeScreen.HomeScreen
 import presentation.style.DarkThemeCompositionLocal
 import presentation.style.MainTheme
 import presentation.style.dimIfDarkMode
@@ -16,7 +19,10 @@ fun App() {
     CompositionLocalProvider(DarkThemeCompositionLocal provides isDark()) {
         MainTheme {
             Surface(modifier = Modifier.fillMaxSize().dimIfDarkMode()) {
-                Navigation()
+                //Navigation() //Non-voyager nav from Navigation.kt
+                Navigator(HomeScreen()){
+                    SlideTransition(it)
+                }
             }
         }
     }
