@@ -1,9 +1,10 @@
 package presentation.screens.tutorialHomeScreen
 
 import androidx.compose.runtime.Composable
+import cafe.adriel.voyager.core.screen.Screen
 
 
-class HomeScreen /*: Screen //from voyager library*/ {
+class HomeScreen : Screen {
     @Composable
     override fun Content(){
 
