@@ -1,8 +1,9 @@
 package presentation.screens.tutorialTaskScreen
 
 import androidx.compose.runtime.Composable
+import cafe.adriel.voyager.core.screen.Screen
 
-class TaskScreen /*: Screen //from voyager library*/ {
+class TaskScreen : Screen {
     @Composable
     override fun Content(){
 
