@@ -8,6 +8,7 @@ Did:
     - Store WIP state of menu buttons. Want to figure out proper state management first before implementing.
     - Rename function
     - Lazy refactor into presentation-domain-data structure -> moved everything that wasn't presentation into domain layer, as we have no real data yet.
+    - Following Tutorial: Temporarily use voyager nav.
 
 12-12-2024
 Streak: 1
